@@ -41,6 +41,13 @@ otherwise.
 .IP
 
 .TP
+\fB\-u\fR
+Only display the Slurm Database version and if conversion is needed and exit
+without taking control. If no conversion is needed 0 is returned, if conversion
+is needed 1 is returned.
+.IP
+
+.TP
 \fB\-v\fR
 Verbose operation. Multiple \fBv\fR's can be specified, with each '\fBv\fR'
 beyond the first increasing verbosity, up to 6 times (i.e. \-vvvvvv).
