@@ -59,6 +59,7 @@
 #define DBD_CONF_FLAG_ALLOW_NO_DEF_ACCT SLURM_BIT(0)
 #define DBD_CONF_FLAG_ALL_RES_ABS SLURM_BIT(1)
 #define DBD_CONF_FLAG_DISABLE_COORD_DBD SLURM_BIT(2)
+#define DBD_CONF_FLAG_GET_DBVER SLURM_BIT(3)
 
 /* SlurmDBD configuration parameters */
 typedef struct {
